# text-to-image-pipeline

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
docs/plans/: 2026-02-21-performance-refactor-design.md  2026-02-21-performance-refactor.md
docs/superpowers/plans/: 2026-04-03-mlx-migration.md
docs/superpowers/specs/: 2026-03-12-image-editing-and-base-model-design.md  2026-03-12-prompt-upsampling-design.md  2026-04-03-mlx-migration-design.md
tests/: conftest.py  test_app.py  test_streamlit_app.py
