[project]
name = "flux2-klein-pipeline"
version = "0.1.0"
description = "Generate and edit images with FLUX.2 Klein (Distilled and Base) and optional prompt enhancement via SmolVLM"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "streamlit",
    "python-dotenv",
    "sentencepiece",
    "torch",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]
